Update deploy script

--- a/PoA-testnet/Dockerfile
+++ b/PoA-testnet/Dockerfile
@@ -1,9 +1,11 @@
 FROM parity/parity:stable
+
 WORKDIR /
 ADD https://raw.githubusercontent.com/poanetwork/poa-chain-spec/sokol/bootnodes.txt .
-
 ADD https://raw.githubusercontent.com/poanetwork/poa-chain-spec/sokol/spec.json .
 
-
-ENTRYPOINT ["/build/parity/target/release/parity"]
-CMD ["--chain", "/spec.json", "--reserved-peers", "/bootnodes.txt"]
+ENTRYPOINT ["/parity/parity"]
+CMD ["--chain", \
+  "/spec.json", \
+  "--reserved-peers", \
+  "/bootnodes.txt"]
